@@ -1,7 +1,11 @@
 # $Id$
 
-2008-12-18	Konstantin V. Arkhipov
+2009-03-26	Vladlen Y. Koshelev
 
+	* core/Base/Singleton.class.php: instantiation of classes with two or more
+	constructor arguments fixed, related tests added.
+
+2008-12-18	Konstantin V. Arkhipov
 	* core/Cache/AggregateCache.class.php: restore true randomness upon
 	exit from guessLabel().
 
